5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1592_1800.log
== TEST (2019-03-31 12:18:29) 
-- CODE:
a = input("escreva um numero: ")
b = input("escreva um numero: ")
c = input("escreva um numero: ")

soma = (a ** 2 + b ** 2 + c ** 2) / (a + b +c)

print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = (a ** 2 + b ** 2 + c ** 2) / (a + b +c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:18:35) 
-- CODE:
a = input("escreva um numero: ")
b = input("escreva um numero: ")
c = input("escreva um numero: ")

soma = (a ** 2 + b ** 2 + c ** 2) / (a + b +c)

print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = (a ** 2 + b ** 2 + c ** 2) / (a + b +c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:18:38) 
-- CODE:
a = input("escreva um numero: ")
b = input("escreva um numero: ")
c = input("escreva um numero: ")

soma = (a ** 2 + b ** 2 + c ** 2) / (a + b +c)

print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = (a ** 2 + b ** 2 + c ** 2) / (a + b +c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:18:42) 
-- CODE:
a = input("escreva um numero: ")
b = input("escreva um numero: ")
c = input("escreva um numero: ")

soma = (a ** 2 + b ** 2 + c ** 2) / (a + b +c)

print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = (a ** 2 + b ** 2 + c ** 2) / (a + b +c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:19:20) 
-- CODE:
a = input("escreva um numero: ")
b = input("escreva um numero: ")
c = input("escreva um numero: ")

soma = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:20:35) 
-- CODE:
a = input("escreva um numero: ")
b = input("escreva um numero: ")
c = input("escreva um numero: ")

soma = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:21:34) 
-- CODE:
a = input("escreva um numero: ")
b = input("escreva um numero: ")
c = input("escreva um numero: ")

soma = srt(int((a ** 2 + b ** 2 + c ** 2) / (a + b + c)))

print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = srt(int((a ** 2 + b ** 2 + c ** 2) / (a + b + c)))
NameError: name 'srt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:21:56) 
-- CODE:
a = input("escreva um numero: ")
b = input("escreva um numero: ")
c = input("escreva um numero: ")

soma = int((a ** 2 + b ** 2 + c ** 2) / (a + b + c))

print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int((a ** 2 + b ** 2 + c ** 2) / (a + b + c))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:24:37) 
-- CODE:
a = input("escreva um numero: ")
b = input("escreva um numero: ")
c = input("escreva um numero: ")

soma = int((a ** 2 + b ** 2 + c ** 2) / (a + b + c))

print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int((a ** 2 + b ** 2 + c ** 2) / (a + b + c))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:28:15) 
-- CODE:
a = input("escreva um numero: ")
b = input("escreva um numero: ")
c = input("escreva um numero: ")

soma = str( int((a ** 2 + b ** 2 + c ** 2) / (a + b + c)))

print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = str( int((a ** 2 + b ** 2 + c ** 2) / (a + b + c)))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:31:36) 
-- CODE:
a = input("escreva um numero: ")
b = input("escreva um numero: ")
c = input("escreva um numero: ")

soma = str( int((a ** 2 + b ** 2 + c ** 2) / (a + b + c)))

print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = str( int((a ** 2 + b ** 2 + c ** 2) / (a + b + c)))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:32:44) 
-- CODE:
a = input("escreva um numero: ")
b = input("escreva um numero: ")
c = input("escreva um numero: ")

soma = float((a ** 2 + b ** 2 + c ** 2) / (a + b + c))

print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = float((a ** 2 + b ** 2 + c ** 2) / (a + b + c))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:33:00) 
-- CODE:
a = input("escreva um numero: ")
b = input("escreva um numero: ")
c = input("escreva um numero: ")

soma = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:35:33) 
-- CODE:
a = input(float("escreva um numero: "))
b = input(float("escreva um numero: "))
c = input(float("escreva um numero: "))

soma = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = input(float("escreva um numero: "))
ValueError: could not convert string to float: 'escreva um numero: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:36:11) 
-- CODE:
a = float(input("escreva um numero: "))
b = float(input("escreva um numero: "))
c = float(input("escreva um numero: "))

soma = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

print(round(soma, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:36:17) 
-- CODE:
a = float(input("escreva um numero: "))
b = float(input("escreva um numero: "))
c = float(input("escreva um numero: "))

soma = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

print(round(soma, 7))
-- EXECUTION TIME:
0.238926
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
